--- a/client/index.html
+++ b/client/index.html
@@ -90,7 +90,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 style="text-transform:lowercase;">...making data beautiful...</h1>
+                        <h1 style="text-transform:lowercase;margin-top:100px;">...making data beautiful...</h1>
                         <p class="intro-text">your cloud<br>or mine</p>
                         <a href="#viz" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -105,9 +105,11 @@
     <div class="col-lg-8 col-lg-offset-2">
 
         <p>click here to enjoy some samples of data visualization</p>
-          <a href="#/stack" class="btn btn-default btn-lg">Stack Overflow Viz</a>
-          <a href="#/sales" class="btn btn-default btn-lg">Sales Viz</a>
+          <a href="#/stack" class="btn btn-default btn-lg">Stack Overflow</a>
+          <a href="#/over" class="btn btn-default btn-lg">SO >50K</a>
           <a href="#/gitHub" class="btn btn-default btn-lg">gitHub Viz</a>
+          <a href="#/stack2" class="btn btn-default btn-lg">Controversial</a>
+           <a href="#/react" class="btn btn-default btn-lg">React</a>
     </div>
     <div id="viz"></div>
     <div ng-view=""></div>
